--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
     <table id="board" class="center">
     <tbody>
       <tr class="row1">
-        <td id="1" class="square"></td>
-        <td id="2" class="square v"></td>
-        <td id="3" class="square"></td>
+        <td id="space0-0" class="square"></td>
+        <td id="space0-1" class="square v"></td>
+        <td id="space0-2" class="square"></td>
       </tr>
       <tr class="row2">
-        <td id="4" class="square h"></td>
-        <td id="5" class="square v h"></td>
-        <td id="6" class="square h"></td>
+        <td id="space1-0" class="square h"></td>
+        <td id="space1-1" class="square v h"></td>
+        <td id="space1-2" class="square h"></td>
       </tr>
       <tr class="row3">
-        <td id="7" class="square"></td>
-        <td id="8" class="square v"></td>
-        <td id="9" class="square"></td>
+        <td id="space2-0" class="square"></td>
+        <td id="space2-1" class="square v"></td>
+        <td id="space2-2" class="square"></td>
       </tr>
     </tbody>
   </table>
